VSTS-165 - fix radio button select alignment
- make the ::before button sit in the middle of the radio button container
- make the ::after button sit in the middle of the ::before button
- move the text over a little as it was crowding the button

VSTS: https://dev.azure.com/AMA-Ent/AMA-Ent/_workitems/edit/165

--- a/app/assets/stylesheets/layout_components/forms.scss
+++ b/app/assets/stylesheets/layout_components/forms.scss
@@ -170,7 +170,7 @@ input[type="checkbox"] + label,
     display: block;
     position: absolute;
     left: 10px;
-    top: 8px;
+    top: calc(50% - 12px);
     width: 24px;
     min-width: 24px;
     height: 24px;
@@ -215,7 +215,7 @@ input[type="checkbox"] + label,
   width: 85%;
   margin-top: 9px;
   margin-bottom: 9px;
-  margin-left: 32px;
+  margin-left: 38px;
 }
 
 input[type="radio"] + label {
@@ -239,7 +239,7 @@ input[type="radio"]:checked + label {
     content: "";
     position: absolute;
     display: block;
-    top: 16px;
+    top: calc(50% - 4px);
     left: 18px;
     background-color: $brand-blue-light;
     width: 8px;
